--- a/packages/google_ml_kit/example/pubspec.yaml
+++ b/packages/google_ml_kit/example/pubspec.yaml
@@ -17,6 +17,7 @@ dependencies:
   image_picker: ^0.8.5
   camera: ^0.9.4+21
   path_provider: ^2.0.9
+  carousel_slider: ^4.1.1
 
 #  google_ml_kit:
 #    path: ../
