--- a/packages/google_ml_kit/example/pubspec.yaml
+++ b/packages/google_ml_kit/example/pubspec.yaml
@@ -56,5 +56,13 @@ dev_dependencies:
 flutter:
   uses-material-design: true
   assets:
-    - assets/poses
+    - assets/poses/shoulder_press1.jpeg
+    - assets/poses/shoulder_press2.jpeg
     - assets/ml/
+    - assets/poses/squat1.jpeg
+    - assets/poses/squat2.jpeg
+    - assets/poses/pushup1.jpeg
+    - assets/poses/pushup2.jpeg
+    - assets/poses/squat.jpeg
+    - assets/poses/pushup.jpeg
+    - assets/poses/shoulder_press.jpeg
