--- a/packages/google_ml_kit/example/pubspec.yaml
+++ b/packages/google_ml_kit/example/pubspec.yaml
@@ -18,6 +18,7 @@ dependencies:
   camera: ^0.9.4+21
   path_provider: ^2.0.9
   carousel_slider: ^4.1.1
+  provider: ^6.0.3
 
 #  google_ml_kit:
 #    path: ../
