--- a/packages/google_ml_kit/example/pubspec.yaml
+++ b/packages/google_ml_kit/example/pubspec.yaml
@@ -19,15 +19,12 @@ dependencies:
   path_provider: ^2.0.9
   carousel_slider: ^4.1.1
   provider: ^6.0.3
+  percent_indicator: ^4.0.1
 
 #  google_ml_kit:
 #    path: ../
 #  google_mlkit_commons:
 #    path: ../../google_mlkit_commons
-  google_mlkit_barcode_scanning:
-    path: ../../google_mlkit_barcode_scanning
-  google_mlkit_digital_ink_recognition:
-    path: ../../google_mlkit_digital_ink_recognition
   google_mlkit_face_detection:
     path: ../../google_mlkit_face_detection
   google_mlkit_image_labeling:
